frontend/src/assets/app.css
:root {
    /* Colors from TUM corporate design
    ** https://portal.mytum.de/corporatedesign/livingstyleguide/section-12.html
    */

    --color-lochmara: #3070b3;
    --color-royalblue: #4889ce;
    --color-nightrider: #333333;
    --color-white: #ffffff;
    --color-citrus: #a0af00;
    --color-tahitigold: #e37222;

    --color-solitude-light: #f3f7f8;
    --color-whitesmoke: #f7f7f7;
    --color-whitesmoke-darker: #f4f4f4;
    --color-gainsboro: #e6e6e6;
    --color-solitude: #dbe2e9;
    --color-verylightgrey: #cdcdcd;
    --color-darkgray: #b3b3b3;
    --color-suvagrey: #8a8a8a;
    --color-grey: #777777;
    --color-empress: #737373;
    --color-charcoal: #4c4c4c;
    --color-black: #000000;    

    --color-citrus-lighter: #d3e233;
    --color-tahitigold-lighter: #ffa555;

    /* Colors picked for functional elements
    */

    --color-text: var(--color-nightrider);
    --color-text-light: var(--color-grey);
    --color-text-lighter: var(--color-suvagrey);
    --color-primary: var(--color-lochmara);
    --color-primary-lighter: var(--color-royalblue);
    --color-spot-1: var(--color-citrus);
    --color-spot-1-lighter: var(--color-citrus-lighter);
    --color-input-border: var(--color-verylightgrey);
    --color-input-border-selected: var(--color-grey);
    --color-button-background: var(--color-whitesmoke-darker);
    --color-nav-background: var(--color-whitesmoke-darker);
    --color-spinner-small-base: var(--color-nightrider);
    --color-spinner-small-blink: var(--color-verylightgrey);
    --color-hover-background: var(--color-gainsboro);


}

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}
body {
  margin: 0 1em;
  line-height: 1.5;
  padding: 0;
  color: var(--color-text);
}
body, input {
  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
}
.page-container {
  height: 100vh;
  margin: 0 auto;
  max-width: 80em;
  display: flex;
  flex-direction: column;
}
.color {
  color: var(--color-primary);
}

a, button.text-button {
  color: var(--color-primary-lighter);
  text-decoration: none;
}
button.text-button.text-button-negligible {
  color: var(--color-text-light);
}
a:hover, button.text-button:hover {
  text-decoration: underline;
}

header {
  flex: 0;
  border-bottom: 1px solid gray;
  padding-bottom: 1ex;
}
header .tum-header {
  margin: 21px 0 30px 0;
  line-height: initial;
}
header .tum-links a {
  color: var(--color-primary);
}
header .language-select {
  margin-right: 20px;
  font-size: initial;
  font-weight: initial;
}
header .language-select .selected {
  font-weight: bold;
}
header .language-select .language-option:hover {
  text-decoration: underline;
}
header .test-checkbox {
  margin-right: 40px;
  font-size: initial;
  font-weight: initial;
  color: var(--color-darkgray);
}
header .test-checkbox:hover {
  color: var(--color-grey);
}
footer a {
  color: var(--color-text);
  text-decoration: none;
}
footer .footer-left > * {
  margin-right: 1em;
}
footer .footer-right > * {
  float: right;
  margin-left: 1em;
}

main {
  flex: 1;
  display: flex;
  min-height: 0;
}
aside {
  flex: 4 1 0%;
  transition: flex-grow 0.2s;
  overflow: auto;
  /* border-right: 1px solid grey; */
}
aside.hidden {
  flex-grow: 0;
}
aside nav {
  background-color: var(--color-nav-background);
  padding: 0.6em;
}
article {
  flex: 8;
  overflow: auto;
  padding: 0.5em;
}

.stick-on-wrapping {
  display: inline-block;
}

.search-bar {
  display: flex;
  align-items: center;
  margin-top: 10px;
  margin-bottom: 10px;
}
.search-bar  .search-label {
  width: 10em;
}

.search-bar .input-group {
  flex: 1;
  display: flex;
  align-items: center;
  border: 1px solid var(--color-input-border);
  /* margin-right: 1rem; */
}
.search-bar .search-input {
  flex: 1;
  font-size: 100%;
  border: none;
}
/* When the :has() "parent-selector" is getting implemented by the browsers we can use something like this:
.search-input:has(input:focus) {
  border-color: var(--color-primary-lighter);
}
*/
.search-bar .clear-input {
  background: none;
  border: none;
}
.fixed-facet-filter .aspect-name {
  font-weight: bold;
}
.fixed-facet-filter .separator {
  margin: 0 0.4em;
}
.bottom-controls {
  min-height: 36px;
  position: relative;
}
.bottom-controls .sidebar-switch {
  position: absolute;
  bottom: 0;
  left: 0;
}
.bottom-controls .submit-buttons {
  position: absolute;
  bottom: 0;
  right: 0;
}
/*
.input-group > * {
  border-radius: 0;
}
.input-group > *:first-child {
  border-top-left-radius: .4rem;
  border-bottom-left-radius: .4rem;
}
.input-group > *:last-child {
  border-top-right-radius: .4rem;
  border-bottom-right-radius: .4rem;
}
*/

/* Remove some builtin-styles for input fields in webkit, chrome, ie */
input:focus{
  outline: none;
}
button:focus{
  outline-style: none;
  box-shadow: none;
  border-color: transparent;
}
input[type="search"]::-webkit-search-cancel-button {
  display: none;
}
input.hide-clear[type=search]::-ms-clear,
input.hide-clear[type=search]::-ms-reveal {
  display: none;
  width: 0;
  height: 0; 
}
button {
  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
}
button.text-button {
  font-size: unset;
  background-color: unset;
  border: 0;
  padding: 0;
}

.filters-bar {
  margin: 0.7rem 0;
}
.filters-bar .fts-aspect-buttons button.text-button {
  margin: 0 0.10rem;
}
.filters-bar .fts-aspect-buttons .separator {
  color: var(--color-text-light);
}
.filters-bar.facet-controls {
  min-height: 5.7ex;
}
.filter-form {
  display: inline-block;
}

.existing-filter.being-edited {
  opacity: 0.5;
}
button:not(:disabled):not(.disabled) {
  cursor: pointer; 
}
button.visual-button:disabled, button.visual-button.disabled {
  opacity: .65;
}
button.visual-button, select {
  user-select: none;
  border: 1px solid;
  padding: .375rem .75rem;
  font-size: 1rem;
  border-radius: .4rem;

  color: var(--color-text);

  background-color: var(--color-button-background);
  border-color: var(--color-input-border);
}
button.visual-button.selected {
  border: 2px solid var(--color-input-border-selected)
}
button.filter-button {
  padding: 0.25rem .75rem;
}


.document {
  display: block;
  margin: 2ex 0;
  padding: 1px 3px;
  border: 1px solid transparent;
}
.document:hover {
  border: 1px solid var(--color-spot-1);
}
a.document {
  color: unset;
  text-decoration: unset;
}
a.document:hover {
  text-decoration: unset;
}
.document .header {
  display: flex;
  align-items: center;
}
.document .header-left {
  flex: 0 1 auto;
  color: var(--color-primary);
}
.document .header-right {
  margin-left: 1em;
  flex: 1 1 15%;
  height: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  text-align: right;
  font-size: 80%;
  color: var(--color-text-light);
}
.listing .document {
  display: flex;
}
.listing .document .thumbnail {
  flex: 0 1 auto;
  margin-right: 1em;
  min-width: 3em;
  max-width: 30%;
}
.listing .document .thumbnail img {
  width: 100%;
  height: auto;
  max-width: 128px;
  max-height: 128px;
}
.listing .document .description {
  flex: 1 1 0;
  width: 15em;
}
.listing .attributes {
  margin-left: 2em;
}
.listing .attribute:hover {
  background-color: var(--color-hover-background);
}
.listing .author {
  font-weight: bold;
}
.listing .attribute.title {
  font-style: italic;
}
.attribute .highlight-search-term {
  background-color: var(--color-spot-1-lighter);
}
/* For development and testing: Highlight unparsable Html with an eye-catching background-color
.attribute .unparsable {
  background-color: rgb(238, 2, 238);
}
*/
.no-more-results {
  font-style: italic;
}
.folder-list {
  list-style-type: none;
  padding-left: 0;
  margin: 0;
}
ul.folder-list ul.folder-list {
    margin-left: 1.4em;
}
.folder-list button.text-button {
  color: unset;
  font-size: unset;
  line-height: inherit;
  width: 100%;
}
.details .header {
  margin: 3ex 0;
}
.details .header .metadatatype
{
  color: var(--color-primary);
}

.folder-head {
  display: flex;
  transition: color .2s;
}
.folder-head.selected {
  color: var(--color-spot-1);
}
.folder-head .folder-name {
  padding-left: 0.6em;
}
.folder-head:hover .folder-name {
  text-decoration: underline;
}

.folder-head.toplevel {
  font-weight: bold;
}

.svg-icon {
  display: inline-block;
  width: 1.5ex;
  height: 1.5ex;
  stroke: currentColor;
  stroke-width: 3px;
  stroke-linejoin: round;
  fill: currentColor;
  transition: transform 0.15s
}
.directory .svg-icon {
  fill: transparent;
}
.expanded .svg-icon {
  transform: rotate(90deg);
}

.article {
  position: relative;
}
.article .thumbnail-switch{
  float: right;
  margin-left: 1em;
  font-size: 80%;
  color: var(--color-text-light);
}
.sidebar-switch {
  font-size: 80%;
}
.spinner {
  width: 3em;
}
.text-align-center {
  text-align: center;
}
.error {
  color: var(--color-primary);
}
.residence {
  margin-top: 4ex;
}
.residence .title {
  font-weight: bold;
}
.details .search-matching{
  margin-top: 4ex;
  font-weight: bold;
}
.breadcrumbs {
  font-size: 80%;
  color: var(--color-text-light);
}
.breadcrumbs a {
  color: inherit;
}
.article .details table {
  border-collapse: collapse;
}
.article .details table td {
  vertical-align: top;
  padding: 0.2em 0;
}
.article .details table td:first-of-type {
  font-weight: bold;
}
.article .details table td + td {
  padding-left: 0.4em;
}

.facet-box {
  margin-top: 1ex;
}
.facet-box {
  border: 2px solid var(--color-nav-background);
  transition: border-color 2s cubic-bezier(0, 1.59, 0.76, 1.1);
}
.facet-box.highlight {
  border: 2px solid var(--color-primary);
}
.facet-head {
  display: flex;
}
.facet-head.text-button {
  color: unset;
  display: flex;
}
.facet-name {
  padding-left: 0.6em;
  font-weight: bold;
}
.facet-body {
  margin-left: 1.4em;
}
.facet-values {
  margin: 0;
  padding: 0;
  list-style: none;
}
.facet-line button.text-button {
  color: unset;
  font-size: unset;
  display: flex;
  line-height: inherit;
  width: 100%;
}
.facet-clickable:hover .facet-value-text, .facet-clickable:hover .facet-name {
  text-decoration: underline;
}
.facet-value-text {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.facet-special-action .facet-value-text {
  font-style: italic;
}
.facet-value-selected {
  color: var(--color-spot-1);
}
.facet-value-count {
  margin-left: 0.2em;
}



/* Small waiting animation with three dots */
.spinner-small, .spinner-small::before, .spinner-small::after {
  width: 4px;
  height: 4px;
  border-radius: 2px;
  background-color:var(--color-spinner-small-base);
  color: var(--color-spinner-small-base);
  animation: spinner-small 1s infinite alternate;
}

.spinner-small {
  position: relative;
  animation-delay: .5s;
  margin: 0.5em;
}

.spinner-small::before, .spinner-small::after {
  content: '';
  display: inline-block;
  position: absolute;
  top: 0;
}

.spinner-small::before {
  left: -7px;
  animation-delay: 0s;
}

.spinner-small::after {
  left: 7px;
  animation-delay: 1s;
}

@keyframes spinner-small {
  0% { background-color: var(--color-spinner-small-base); }
  60%, 100% { background-color: var(--color-spinner-small-blink); }
}

